--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,12 +6,12 @@ $laptop-medium: 1024px;
 $tablet: 768px;
 $mobile-large: 425px;
 $mobile-medium: 375px;
-$mobile-small: 300px;
+$mobile-small: 320px;
 
 
-$primary: #80C4B7;
-$secondary: #E3856B;
-$tertiary: #EDC8D2;
+$primary: #31473A;
+$secondary: #7C8363;
+$tertiary: #EDF4F2;
 $form-background: white;
 
 $colors: (
@@ -85,4 +85,27 @@ $flex-directions: (
   "column": column,
   "row-reverse": row-reverse,
   "column-reverse": column-reverse
+);
+
+$widthsAndHeights: (
+  "25": 25%,
+  "50": 50%,
+  "75": 75%,
+  "100": 100%
+);
+
+$paddings: (
+  "1": $base-padding,
+  "2": $base-padding * 2,
+  "3": $base-padding * 3,
+  "4": $base-padding * 4,
+  "5": $base-padding * 5
+);
+
+$margins: (
+  "1": $base-margin,
+  "2": $base-margin * 2,
+  "3": $base-margin * 3,
+  "4": $base-margin * 4,
+  "5": $base-margin * 5
 );
