--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -60,10 +60,6 @@ body {
   background-color: $primary;
 }
 
-#navbar {
-  padding: calc($base-padding / 2);
-}
-
 #spinning-circle {
   width: 200px;
   height: 200px;
@@ -82,27 +78,29 @@ body {
   height: 100vh;
 
   .form {
-    background-color: $form-background;
+    background-color: $tertiary;
     padding: calc($base-padding * 2) calc($base-padding * 4);
     border-radius: 10px;
-    min-width: 290px;
-    
-    @include laptop-medium {
-      min-width: 550px;
+    min-width: 550px;
+
+    @include tablet() {
+      min-width: 400px;
     }
 
-    @include tablet {
-      padding: calc($base-padding * 2) calc($base-padding * 2);
-      width: 350px;
+    @include mobile-large() {
+      min-width: 350px;
     }
 
-    @include mobile-medium {
-      padding: calc($base-padding * 2) calc($base-padding * 2);
-      width: 290px;
+    @include mobile-medium() {
+      min-width: 320px;
     }
 
+    @include mobile-small() {
+      min-width: 300px;
+    }
 
     .input {
+      background-color: $tertiary;
       margin: calc($base-margin / 2) 0;
       border: none;
       border-bottom: 1px solid $primary;
@@ -110,10 +108,6 @@ body {
       font-size: $base-font-size;
       font-weight: 600;
       width: 100%;
-
-      @include laptop-medium {
-        min-width: 400px;
-      }
       
       &::placeholder {
         opacity: 0.5;
@@ -122,6 +116,7 @@ body {
 
     label {
       margin: $base-margin 0;
+      cursor: pointer;
 
       #icon {
         width: 30px;
@@ -138,16 +133,53 @@ body {
       margin: $base-margin auto;
     }
 
-    button {
-      margin: $base-margin 0;
-      width: 100%;
-    }
-
-    .sign-button {
+    .link-button {
       text-decoration: none;
       color: $secondary;
       font-weight: 600;
     }
+  }
+}
+
+// Navbar
+
+
+#navbar {
+  border-bottom: 1px solid $tertiary;
+  padding: calc($base-padding * 2) calc($base-padding * 10);
+  .authorisation {
+    button {
+      margin: 0 1rem;
+    }
+  }
+}
+
+
+// MessagingWindow
+
+#messaging-window {
+  background-color: $secondary;
+  border-radius: $base-border-radius;
+  overflow: hidden;
+  width: 500px;
+
+  .side-bar {
+    flex: 1;
+
+    .sidebar-navbar {
+      padding: $base-padding;
+      width: fit-content;
+
+      img {
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+
+  .chat-box {
+    flex: 2;
   }
 }
 
