Add email verification, fix messagewindow flex, change text color, start working on sidebarChats.tsx

--- a/src/styles/_functions.scss
+++ b/src/styles/_functions.scss
@@ -11,12 +11,10 @@
 }
 
 // Generate colors with defined colors in variables with opacity
-
 @each $colorname, $color in $colors {
   @for $opacity from 1 through 9 {
     .bg-#{$colorname}-#{$opacity} {
-      background-color: $color;
-      opacity: calc($opacity / 10);
+      background-color: rgba($color, $opacity / 10);
     }
 
     .text-#{$colorname}-#{$opacity} {
