--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -58,6 +58,19 @@ body {
   margin: 0;
   padding: 0;
   background-color: $primary;
+  color: $tertiary;
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.border-none {
+  border: none;
+}
+
+.outline-none {
+  outline: none;
 }
 
 #spinning-circle {
@@ -71,6 +84,11 @@ body {
   animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
+}
+
+#verify-email {
+  width: 100vw;
+  height: 100vh;
 }
 
 // Registration page
@@ -160,28 +178,29 @@ body {
 // MessagingWindow
 
 #messaging-window {
-  background-color: $secondary;
   border-radius: $base-border-radius;
   overflow: hidden;
   width: 500px;
 
   .side-bar {
-    flex: 1;
+    flex: 1;;
+    width: 100%;
 
     .sidebar-navbar {
       padding: $base-padding;
-      width: fit-content;
 
       img {
         border-radius: 50%;
-        width: 30px;
-        height: 30px;
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
       }
     }
   }
 
   .chat-box {
     flex: 2;
+    width: 100%;
   }
 }
 
