Start working on searchbar in sidebar, add functionality so that user info will be saved in docs even during google sign in operations.

--- a/src/styles/_functions.scss
+++ b/src/styles/_functions.scss
@@ -14,7 +14,7 @@
 @each $colorname, $color in $colors {
   @for $opacity from 1 through 9 {
     .bg-#{$colorname}-#{$opacity} {
-      background-color: rgba($color, $opacity / 10);
+      background-color: rgba($color, calc($opacity / 10));
     }
 
     .text-#{$colorname}-#{$opacity} {
