--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,7 @@ $primary: #31473A;
 $secondary: #7C8363;
 $tertiary: #EDF4F2;
 $form-background: white;
+$font-secondary: rgb(128, 128, 128);
 
 $colors: (
   "primary": $primary,
