--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -96,6 +96,7 @@ body {
 #register, #login {
   width: 100vw;
   height: 100vh;
+  color: $font-secondary;
 
   .form {
     background-color: $tertiary;
