Time to start working on userChats click event handler, update login.tsx update register.tsx

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -12,16 +12,16 @@
   background-color: rgba(124, 131, 99, 0.6);
 }
 
+.bg-tertiary-6 {
+  background-color: rgba(237, 244, 242, 0.6);
+}
+
 .fw-6 {
   font-weight: 600;
 }
 
 .fs-1 {
   font-size: 16px;
-}
-
-.fs-2 {
-  font-size: 24px;
 }
 
 .fs-3 {
@@ -62,6 +62,14 @@
 
 .p-1 {
   padding: 10px;
+}
+
+.pt-1 {
+  padding-top: 10px;
+}
+
+.pb-1 {
+  padding-bottom: 10px;
 }
 
 .ml-1 {
@@ -110,10 +118,6 @@
   font-family: "Raleway", sans-serif;
   margin: 0;
   padding: 0;
-}
-
-.bg-transparent {
-  background-color: transparent;
 }
 
 .border-none {
@@ -219,8 +223,10 @@
   border-radius: 10px;
   overflow: hidden;
   width: 500px;
+  min-height: 500px;
 }
 #messaging-window .side-bar {
+  border-right: 1px solid #31473A;
   flex: 1;
   width: 100%;
 }
@@ -231,6 +237,18 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  object-fit: cover;
+}
+#messaging-window .side-bar .found-users {
+  cursor: pointer;
+}
+#messaging-window .side-bar .found-users:hover {
+  background-color: rgba(49, 71, 58, 0.5);
+}
+#messaging-window .side-bar .found-users img {
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
   object-fit: cover;
 }
 #messaging-window .chat-box {
