--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -182,9 +182,11 @@ body {
   border-radius: $base-border-radius;
   overflow: hidden;
   width: 500px;
+  min-height: 500px;
 
   .side-bar {
-    flex: 1;;
+    border-right: 1px solid $primary;
+    flex: 1;
     width: 100%;
 
     .sidebar-navbar {
@@ -194,6 +196,21 @@ body {
         border-radius: 50%;
         width: 50px;
         height: 50px;
+        object-fit: cover;
+      }
+    }
+
+    .found-users {
+      cursor: pointer;
+
+      &:hover {
+        background-color: rgba($primary, 0.5);
+      }
+
+      img {
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
         object-fit: cover;
       }
     }
