--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -202,6 +202,7 @@ body {
 
     .found-users {
       cursor: pointer;
+      z-index: 5;
 
       &:hover {
         background-color: rgba($primary, 0.5);
@@ -212,6 +213,11 @@ body {
         width: 35px;
         height: 35px;
         object-fit: cover;
+        z-index: 2;
+      }
+
+      p {
+        z-index: 2;
       }
     }
   }
