--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,11 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+.text-primary {
+  color: #31473A;
+}
+
 .bg-secondary {
   background-color: #7C8363;
 }
 
+.bg-tertiary {
+  background-color: #EDF4F2;
+}
+
 .text-tertiary {
   color: #EDF4F2;
+}
+
+.bg-primary-5 {
+  background-color: rgba(49, 71, 58, 0.5);
 }
 
 .bg-secondary-6 {
@@ -22,6 +34,10 @@
 
 .fs-1 {
   font-size: 16px;
+}
+
+.fs-2 {
+  font-size: 24px;
 }
 
 .fs-3 {
@@ -56,12 +72,32 @@
   flex-direction: column;
 }
 
+.h-10 {
+  height: 10%;
+}
+
+.w-25 {
+  width: 25%;
+}
+
+.w-75 {
+  width: 75%;
+}
+
 .w-100 {
   width: 100%;
 }
 
+.h-100 {
+  height: 100%;
+}
+
 .p-1 {
   padding: 10px;
+}
+
+.pl-1 {
+  padding-left: 10px;
 }
 
 .pt-1 {
@@ -76,8 +112,16 @@
   margin-left: 10px;
 }
 
+.mr-1 {
+  margin-right: 10px;
+}
+
 .mb-1 {
   margin-bottom: 10px;
+}
+
+.ml-2 {
+  margin-left: 20px;
 }
 
 .mt-2 {
@@ -120,6 +164,10 @@
   padding: 0;
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .border-none {
   border: none;
 }
@@ -144,6 +192,11 @@
 #verify-email {
   width: 100vw;
   height: 100vh;
+}
+
+.icon {
+  width: 25px;
+  height: 25px;
 }
 
 #register, #login {
@@ -223,12 +276,16 @@
   border-radius: 10px;
   overflow: hidden;
   width: 500px;
-  min-height: 500px;
+  height: 500px;
 }
 #messaging-window .side-bar {
-  border-right: 1px solid #31473A;
   flex: 1;
   width: 100%;
+  overflow-y: scroll;
+}
+#messaging-window .side-bar::-webkit-scrollbar {
+  width: 1px;
+  background-color: #EDF4F2;
 }
 #messaging-window .side-bar .sidebar-navbar {
   padding: 10px;
@@ -242,6 +299,7 @@
 #messaging-window .side-bar .found-users {
   cursor: pointer;
   z-index: 5;
+  overflow: hidden;
 }
 #messaging-window .side-bar .found-users:hover {
   background-color: rgba(49, 71, 58, 0.5);
@@ -260,7 +318,19 @@
   flex: 2;
   width: 100%;
 }
-
+#messaging-window .chat-box .navbar .userinfo {
+  overflow: hidden;
+}
+#messaging-window .chat-box .navbar .userinfo img {
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  object-fit: cover;
+  z-index: 2;
+}
+#messaging-window .chat-box .messages {
+  height: 80%;
+}
 @keyframes rotate {
   0% {
     transform: rotate(-360deg);
