--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -91,6 +91,11 @@ body {
   height: 100vh;
 }
 
+.icon {
+  width: $base-icon-width;
+  height: $base-icon-height;
+}
+
 // Registration page
 
 #register, #login {
@@ -182,12 +187,17 @@ body {
   border-radius: $base-border-radius;
   overflow: hidden;
   width: 500px;
-  min-height: 500px;
+  height: 500px;
 
   .side-bar {
-    border-right: 1px solid $primary;
     flex: 1;
     width: 100%;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 1px;
+      background-color: $tertiary;
+    }
 
     .sidebar-navbar {
       padding: $base-padding;
@@ -203,6 +213,7 @@ body {
     .found-users {
       cursor: pointer;
       z-index: 5;
+      overflow: hidden;
 
       &:hover {
         background-color: rgba($primary, 0.5);
@@ -225,6 +236,28 @@ body {
   .chat-box {
     flex: 2;
     width: 100%;
+
+    .navbar {
+      .userinfo {
+        overflow: hidden;
+
+        img {
+          border-radius: 50%;
+          width: 35px;
+          height: 35px;
+          object-fit: cover;
+          z-index: 2;
+        }
+      }
+    }
+
+    .messages {
+      height: 80%;
+    }
+
+    #chat-box-input {
+
+    }
   }
 }
 
