Fix bug of chat not appearing in target user's chats list, fix scroll bug (it still needs fix, when message is sent it still scrolls down), remove DocUser interface as it is not needed in anything, instead use DocumentData, add in userChats isOnline and isWriting statuses for chatting purposes (not utilized yet, start working on useEffect in sidebarchats to utilize online status) (NOT FINISHED NEEDS FIX AND UPDATE).

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,8 +9,8 @@ $mobile-medium: 375px;
 $mobile-small: 320px;
 
 
-$primary: #31473A;
-$secondary: #7C8363;
+$primary: #00539C;
+$secondary: #EEA47F;
 $tertiary: #EDF4F2;
 $form-background: white;
 $font-secondary: rgb(128, 128, 128);
