--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .text-primary {
-  color: #31473A;
+  color: #00539C;
 }
 
 .bg-secondary {
-  background-color: #7C8363;
+  background-color: #EEA47F;
 }
 
 .bg-tertiary {
@@ -17,11 +17,11 @@
 }
 
 .bg-primary-5 {
-  background-color: rgba(49, 71, 58, 0.5);
+  background-color: rgba(0, 83, 156, 0.5);
 }
 
 .bg-secondary-6 {
-  background-color: rgba(124, 131, 99, 0.6);
+  background-color: rgba(238, 164, 127, 0.6);
 }
 
 .bg-tertiary-6 {
@@ -132,10 +132,6 @@
   margin-left: 10px;
 }
 
-.mr-1 {
-  margin-right: 10px;
-}
-
 .mb-1 {
   margin-bottom: 10px;
 }
@@ -162,18 +158,18 @@
 
 .button-secondary {
   transition: 0.1s;
-  border: 2px solid #7C8363;
+  border: 2px solid #EEA47F;
   border-radius: 10px;
   outline: none;
   background-color: transparent;
-  color: #7C8363;
+  color: #EEA47F;
   font-weight: 700;
   font-size: 16px;
   padding: 10px 20px;
   cursor: pointer;
 }
 .button-secondary:hover {
-  background-color: #7C8363;
+  background-color: #EEA47F;
   color: white;
 }
 
@@ -223,6 +219,16 @@
   object-fit: cover;
 }
 
+.onlineCircle {
+  min-width: 10px;
+  min-height: 10px;
+  border-radius: 50%;
+  background-color: rgba(238, 164, 127, 0.93);
+  position: relative;
+  left: -8px;
+  top: 10px;
+}
+
 #register, #login {
   width: 100vw;
   height: 100vh;
@@ -258,7 +264,7 @@
   background-color: #EDF4F2;
   margin: 5px 0;
   border: none;
-  border-bottom: 1px solid #31473A;
+  border-bottom: 1px solid #00539C;
   padding: 10px 0;
   font-size: 16px;
   font-weight: 600;
@@ -280,7 +286,7 @@
 }
 #register .form .link-button, #login .form .link-button {
   text-decoration: none;
-  color: #7C8363;
+  color: #EEA47F;
   font-weight: 600;
 }
 
@@ -322,7 +328,7 @@
   overflow: hidden;
 }
 #messaging-window .side-bar .found-users:hover {
-  background-color: rgba(49, 71, 58, 0.5);
+  background-color: rgba(0, 83, 156, 0.5);
 }
 #messaging-window .side-bar .found-users p {
   z-index: 2;
@@ -370,7 +376,7 @@
 }
 #messaging-window .chat-box .messages .sent p {
   margin-right: 10px;
-  background-color: #31473A;
+  background-color: #00539C;
   color: white;
   padding: 5px;
   border-radius: 10px 0 10px 10px;
@@ -392,5 +398,36 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+#wave {
+  position: relative;
+  text-align: center;
+  width: 50px;
+  height: 15px;
+  margin-left: 5px;
+}
+#wave .dot {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  margin-right: 3px;
+  background: rgba(0, 83, 156, 0.7);
+  animation: wave 1.3s linear infinite;
+}
+#wave .dot:nth-child(2) {
+  animation-delay: -1.1s;
+}
+#wave .dot:nth-child(3) {
+  animation-delay: -0.9s;
+}
+
+@keyframes wave {
+  0%, 60%, 100% {
+    transform: initial;
+  }
+  30% {
+    transform: translateY(-7px);
   }
 }
