--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -104,6 +104,16 @@ body {
   object-fit: cover;
 }
 
+.onlineCircle {
+  min-width: 10px;
+  min-height: 10px;
+  border-radius: 50%;
+  background-color: rgba($secondary, 0.93);
+  position: relative;
+  left: -8px;
+  top: 10px;
+}
+
 // Registration page
 
 #register, #login {
@@ -314,4 +324,43 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+// <--------------------------------------------------------------------------------------->
+// styles for jumping dots while sending a message. (styles taken from stackoverflow).
+// <--------------------------------------------------------------------------------------->
+
+#wave {
+	position:relative;
+	text-align:center;
+	width:50px;
+	height:15px;
+  margin-left: calc($base-margin / 2);
+	.dot {
+		display:inline-block;
+		width:8px;
+		height:8px;
+		border-radius:50%;
+		margin-right:3px;
+		background: rgba($primary, 0.7);
+		animation: wave 1.3s linear infinite;
+
+		&:nth-child(2) {
+			animation-delay: -1.1s;
+		}
+
+		&:nth-child(3) {
+			animation-delay: -0.9s;
+		}
+	}
+}
+
+@keyframes wave {
+	0%, 60%, 100% {
+		transform: initial;
+	}
+
+	30% {
+		transform: translateY(-7px);
+	}
 }
