--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -65,6 +65,10 @@ $transition-duration: 0.1s;
 
 html {
   overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 video {
@@ -80,8 +84,15 @@ video {
 }
 
 .navbar {
-  height: 60px;
+  height: 85px;
   box-shadow: 0 2px 10px 0 rgba(0,0,0,.5);
+  position: relative;
+  top: -20px;
+
+  .navbar-image {
+    width: 100px;
+    height: 100px;
+  }
 
   .navbar-button {
     text-decoration: none;
@@ -125,9 +136,23 @@ video {
 }
 
 .text-box-container {
-  margin: 10vh 10vw;
+  width: 75%;
+  margin: 20vh auto 0 auto;
+
+  .text-box {
+    width: 30%;
+    background-color: rgba($secondary, 0.8);
+  }
 }
 
+
+.footer {
+  margin-top: 15vh;
+
+  h3 {
+    opacity: 0.8;
+  }
+}
 
 
 
