--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -6,10 +6,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
  div, span, object,
 h1,
-.h1, h3, .h3, p,
+.h1, h2, .h2, h3, .h3, p,
 a, code, img, s,
 b, form, label, footer, header,
-time {
+time, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -169,7 +169,7 @@ hr {
   opacity: 0.25;
 }
 
- h3, .h3, h1, .h1 {
+ h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
   font-weight: 500;
@@ -183,6 +183,15 @@ h1, .h1 {
 @media (min-width: 1200px) {
   h1, .h1 {
     font-size: 2.5rem;
+  }
+}
+
+h2, .h2 {
+  font-size: calc(1.325rem + 0.9vw);
+}
+@media (min-width: 1200px) {
+  h2, .h2 {
+    font-size: 2rem;
   }
 }
 
@@ -320,6 +329,43 @@ textarea {
   font: inherit;
   -webkit-appearance: button;
 }
+
+.container,
+.container-fluid {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+   .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+   .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+   .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+   .container {
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1400px) {
+   .container {
+    max-width: 1320px;
+  }
+}
 :root {
   --bs-breakpoint-xs: 0;
   --bs-breakpoint-sm: 576px;
@@ -327,6 +373,42 @@ textarea {
   --bs-breakpoint-lg: 992px;
   --bs-breakpoint-xl: 1200px;
   --bs-breakpoint-xxl: 1400px;
+}
+
+.row {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-right: calc(-0.5 * var(--bs-gutter-x));
+  margin-left: calc(-0.5 * var(--bs-gutter-x));
+}
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) * 0.5);
+  padding-left: calc(var(--bs-gutter-x) * 0.5);
+  margin-top: var(--bs-gutter-y);
+}
+
+.col {
+  flex: 1 0 0%;
+}
+
+.g-3 {
+  --bs-gutter-x: 1rem;
+}
+
+.g-3 {
+  --bs-gutter-y: 1rem;
+}
+@media (min-width: 992px) {
+  .col-lg-4 {
+    flex: 0 0 auto;
+    width: 33.33333333%;
+  }
 }
 
 .navbar {
@@ -356,6 +438,13 @@ textarea {
   align-items: center;
   justify-content: space-between;
   padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
+}
+.navbar > .container,
+.navbar > .container-fluid {
+  display: flex;
+  flex-wrap: inherit;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @keyframes progress-bar-stripes {
@@ -434,8 +523,16 @@ textarea {
   display: none !important;
 }
 
+.position-fixed {
+  position: fixed !important;
+}
+
 .w-25 {
   width: 25% !important;
+}
+
+.w-50 {
+  width: 50% !important;
 }
 
 .w-75 {
@@ -458,6 +555,34 @@ textarea {
   flex-direction: column !important;
 }
 
+.align-items-center {
+  align-items: center !important;
+}
+
+.m-0 {
+  margin: 0 !important;
+}
+
+.mx-5 {
+  margin-right: 3rem !important;
+  margin-left: 3rem !important;
+}
+
+.mx-auto {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+
+.my-4 {
+  margin-top: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
+}
+
+.my-5 {
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
+}
+
 .mt-2 {
   margin-top: 0.5rem !important;
 }
@@ -474,6 +599,10 @@ textarea {
   margin-right: 1rem !important;
 }
 
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem !important;
 }
@@ -482,8 +611,29 @@ textarea {
   margin-bottom: 0.5rem !important;
 }
 
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+
+.p-0 {
+  padding: 0 !important;
+}
+
 .p-1 {
   padding: 0.25rem !important;
+}
+
+.p-3 {
+  padding: 1rem !important;
+}
+
+.px-4 {
+  padding-right: 1.5rem !important;
+  padding-left: 1.5rem !important;
 }
 
 .px-5 {
@@ -496,12 +646,25 @@ textarea {
   padding-bottom: 0 !important;
 }
 
+.py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}
+
 .pt-1 {
   padding-top: 0.25rem !important;
 }
 
+.pb-0 {
+  padding-bottom: 0 !important;
+}
+
 .pb-1 {
   padding-bottom: 0.25rem !important;
+}
+
+.gap-3 {
+  gap: 1rem !important;
 }
 
 .fs-1 {
@@ -516,12 +679,25 @@ textarea {
   font-size: calc(1.3rem + 0.6vw) !important;
 }
 
+.fs-5 {
+  font-size: 1.25rem !important;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
 /* rtl:begin:remove */
 
 /* rtl:end:remove */
 .text-primary {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-secondary {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
 }
 
 .bg-primary {
@@ -532,6 +708,35 @@ textarea {
 .bg-secondary {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.rounded {
+  border-radius: var(--bs-border-radius) !important;
+}
+@media (min-width: 768px) {
+  .mt-md-0 {
+    margin-top: 0 !important;
+  }
+}
+@media (min-width: 992px) {
+  .flex-lg-row {
+    flex-direction: row !important;
+  }
+  .mt-lg-0 {
+    margin-top: 0 !important;
+  }
+  .mb-lg-0 {
+    margin-bottom: 0 !important;
+  }
+  .pt-lg-5 {
+    padding-top: 3rem !important;
+  }
+  .gap-lg-5 {
+    gap: 3rem !important;
+  }
+  .text-lg-start {
+    text-align: left !important;
+  }
 }
 @media (min-width: 1200px) {
   .fs-1 {
@@ -548,8 +753,34 @@ textarea {
   font-family: "Inter", sans-serif;
 }
 
+video {
+  filter: brightness(40%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -99;
+}
+
+.video-container {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  min-height: 100vh !important;
+}
+
 .navbar {
-  height: 60px;
+  height: 85px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: -20px;
+  z-index: 99;
+}
+.navbar .navbar-image {
+  width: 100px;
+  height: 100px;
 }
 .navbar .navbar-button {
   text-decoration: none;
@@ -564,6 +795,37 @@ textarea {
 .navbar .navbar-button:hover {
   opacity: 1;
   cursor: pointer;
+}
+
+.gradient-text {
+  background-size: 100%;
+  background-image: linear-gradient(45deg, #6B1E7B, #FF4081);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.text-box-container .text-box {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.footer {
+  color: rgba(255, 255, 255, 0.8);
+}
+.footer h3, .footer .h3 {
+  font-weight: normal;
+}
+.footer .contact-link-wrapper a img {
+  top: 0;
+  opacity: 0.8;
+  transition: 0.1s;
+  width: 40px;
+  height: 40px;
+}
+.footer .contact-link-wrapper a img:hover {
+  opacity: 1;
 }
 
 .roller-wrapper {
@@ -593,7 +855,7 @@ textarea {
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: #8f6e5d;
+  background: #404040;
   margin: -4px 0 0 -4px;
 }
 
