--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -54,7 +54,7 @@ $primary:#404040;
 $secondary: #fff;
 $tertiary: #6B1E7B;
 $tertiary-second: #FF4081;
-$transition-duration: 0.1s;
+$base-transition-duration: 0.1s;
 
 @import '../../../node_modules/bootstrap/scss/bootstrap'; // Import Bootstrap styles
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
@@ -73,14 +73,20 @@ html {
 
 video {
   filter: brightness(40%);
-  flex: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -99;
 }
 
 .video-container {
-  width: 500%;
-  position: absolute;
-  top: 0;
-  z-index: -99;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  min-height: 100vh !important;
 }
 
 .navbar {
@@ -88,6 +94,7 @@ video {
   box-shadow: 0 2px 10px 0 rgba(0,0,0,.5);
   position: relative;
   top: -20px;
+  z-index: 99;
 
   .navbar-image {
     width: 100px;
@@ -104,7 +111,7 @@ video {
     line-height: normal;
   
     opacity: 0.8;
-    transition: $transition-duration;
+    transition: $base-transition-duration;
 
     &:hover {
       opacity: 1;
@@ -136,21 +143,36 @@ video {
 }
 
 .text-box-container {
-  width: 75%;
-  margin: 20vh auto 0 auto;
-
   .text-box {
-    width: 30%;
     background-color: rgba($secondary, 0.8);
   }
 }
 
 
 .footer {
-  margin-top: 15vh;
+  color: rgba($secondary, 0.8);
 
   h3 {
-    opacity: 0.8;
+    font-weight: normal;
+  }
+
+  .contact-link-wrapper {
+
+    a {
+      img {
+        top: 0;
+        
+        opacity: 0.8;
+        transition: $base-transition-duration;
+        
+        width: 40px;
+        height: 40px;
+        
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
 
@@ -226,7 +248,7 @@ video {
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: #8f6e5d;
+  background: $primary;
   margin: -4px 0 0 -4px;
 }
 .lds-roller div:nth-child(1) {
