--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -559,12 +559,21 @@ textarea {
   flex-direction: column !important;
 }
 
+.justify-content-center {
+  justify-content: center !important;
+}
+
 .align-items-center {
   align-items: center !important;
 }
 
 .m-0 {
   margin: 0 !important;
+}
+
+.mx-2 {
+  margin-right: 0.5rem !important;
+  margin-left: 0.5rem !important;
 }
 
 .mx-5 {
@@ -611,10 +620,6 @@ textarea {
   margin-bottom: 0.25rem !important;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem !important;
-}
-
 .mb-3 {
   margin-bottom: 1rem !important;
 }
@@ -633,6 +638,10 @@ textarea {
 
 .p-3 {
   padding: 1rem !important;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
 }
 
 .px-4 {
@@ -681,6 +690,10 @@ textarea {
 
 .fs-3 {
   font-size: calc(1.3rem + 0.6vw) !important;
+}
+
+.fs-4 {
+  font-size: calc(1.275rem + 0.3vw) !important;
 }
 
 .fs-5 {
@@ -751,6 +764,9 @@ textarea {
   }
   .fs-3 {
     font-size: 1.75rem !important;
+  }
+  .fs-4 {
+    font-size: 1.5rem !important;
   }
 }
 * {
@@ -830,6 +846,43 @@ video {
 }
 .footer .contact-link-wrapper a img:hover {
   opacity: 1;
+}
+
+#register, #login {
+  width: 100vw;
+  height: 100vh;
+}
+#register .sign-form, #login .sign-form {
+  background: rgba(255, 255, 255, 0.8);
+}
+#register .form, #login .form {
+  max-width: 540px;
+}
+#register .form .input, #login .form .input {
+  background-color: rgba(64, 64, 64, 0.5);
+  color: #fff;
+  border: none;
+  outline: none;
+  border-bottom: #404040 solid 1px;
+  margin-bottom: 13px;
+  border-radius: 5px;
+  padding: 0 1rem;
+  height: 29px;
+  font-family: "Inter", sans-serif;
+}
+#register .form .input::placeholder, #login .form .input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+#register .form .icon, #login .form .icon {
+  width: 35px;
+  height: 35px;
+}
+#register .form .upload-image-label, #login .form .upload-image-label {
+  cursor: pointer;
+}
+#register .form .sign-button, #login .form .sign-button {
+  height: 29px;
+  padding: 0;
 }
 
 .roller-wrapper {
