--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -608,6 +608,10 @@ textarea {
   margin-top: 3rem !important;
 }
 
+.me-1 {
+  margin-right: 0.25rem !important;
+}
+
 .me-3 {
   margin-right: 1rem !important;
 }
@@ -642,6 +646,11 @@ textarea {
 
 .p-4 {
   padding: 1.5rem !important;
+}
+
+.px-3 {
+  padding-right: 1rem !important;
+  padding-left: 1rem !important;
 }
 
 .px-4 {
@@ -730,9 +739,17 @@ textarea {
 .rounded {
   border-radius: var(--bs-border-radius) !important;
 }
+
+.rounded-circle {
+  border-radius: 50% !important;
+}
 @media (min-width: 768px) {
   .mt-md-0 {
     margin-top: 0 !important;
+  }
+  .px-md-5 {
+    padding-right: 3rem !important;
+    padding-left: 3rem !important;
   }
 }
 @media (min-width: 992px) {
@@ -856,6 +873,7 @@ video {
   background: rgba(255, 255, 255, 0.8);
 }
 #register .error, #login .error {
+  margin-top: 0;
   color: #FF4081;
   margin-bottom: 8px;
 }
@@ -886,6 +904,16 @@ video {
 #register .form .sign-button, #login .form .sign-button {
   height: 29px;
   padding: 0;
+}
+
+.homepage-logged-in {
+  width: 100%;
+  height: 100%;
+}
+.homepage-logged-in .user-photo {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
 }
 
 .roller-wrapper {
