--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -69,6 +69,9 @@ html {
   &::-webkit-scrollbar {
     display: none;
   }
+
+  margin: 0;
+  padding: 0;
 }
 
 video {
@@ -226,7 +229,22 @@ video {
   }
 }
 
+.homepage-logged-in {
+  width: 100%;
+  height: 100%;
 
+  .user-photo {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+  }
+
+  // Bootstrap classname (retrieved from inspect element)
+  .dropdown-menu {
+    margin-top: 1.3rem;
+  }
+  
+}
 
 
 
