--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -97,7 +97,7 @@ video {
   box-shadow: 0 2px 10px 0 rgba(0,0,0,.5);
   position: relative;
   top: -20px;
-  z-index: 99;
+  z-index: 999;
 
   .navbar-image {
     width: 100px;
@@ -244,9 +244,24 @@ video {
     margin-top: 1.3rem;
   }
   
+  .notification-icon {
+    width: 20px;
+    height: 20px;
+    color: rgba($secondary, 0.6);
+    margin-right: 8px;
+    transition: $base-transition-duration;
+
+    &:hover {
+      color: $secondary;
+      cursor: pointer;
+    }
+  }
 }
 
-
+.home-content-logged-in {
+  width: 100%;
+  min-height: 80vh;
+}
 
 
 
